<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.touchgestures.MainActivity"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".85"
        android:id="@+id/gesturesScrollView">

        <TextView
            android:id="@+id/gesturesLogTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_line">
        </TextView>
    </ScrollView>


    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clearAll"
        android:text="@string/clear_button_text"
        tools:text="@string/clear_button_text" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_weight=".15"
        android:layout_height="0dp"
        android:id="@+id/gridLayout"
        android:columnCount="4"
        android:rowCount="3">

        <TextView
            android:text="@string/single_taps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center" />

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="center"
            android:id="@+id/singleTapTextView" />

        <TextView
            android:text="@string/scrolls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="2"
            android:gravity="center" />

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="3"
            android:gravity="center"
            android:id="@+id/scrollTextView" />

        <TextView
            android:text="@string/double_taps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:gravity="center" />

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doubleTapTextView"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center" />

        <TextView
            android:text="@string/flings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center" />

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="3"
            android:gravity="center"
            android:id="@+id/flingTextView" />

        <TextView
            android:text="@string/long_presses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            android:gravity="center" />

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:layout_row="2"
            android:gravity="center"
            android:id="@+id/longPressTextView" />
    </GridLayout>

</LinearLayout>
